# mmdeploy_tensorrt_ops

./: CMakeLists.txt  README.md  package.xml
plugins/: common  tensorrt
